--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 
 h1 {
     padding: 25px 0 12px;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 p {
@@ -80,12 +80,36 @@ header {
 
 .logo {
     width: 150px;
+    height: 150px;
+    margin-left: 50px;
     margin-right: 100px;
+    position: relative;
 }
 
 .logo img {
+    height: 100%;
     width: 100%;
+    transform: translateY(18px);
 }
+
+/*There will be .logoBlue and .logoWhite . These two elements should be on top of each other. Blue on top and white on bottom. */
+/* .logoBlue {
+    position: absolute;
+    z-index: 1;
+} */
+
+.logo img:hover {
+    visibility: hidden;
+}
+
+/* .logoWhite {
+    position: absolute;
+    z-index: 0;
+} */
+
+/* .logoWhite:hover {
+    visibility: visible;
+} */
 
 .bg {
     max-height: 145vh;
@@ -99,7 +123,7 @@ header {
 .square-container {
     position: absolute;
     top: 0;
-    right: 50%;
+    right: 55%;
     width: 30%;
     /* width: 100%;  */
     height: var(--bodyHeight); /* Wysokość kontenera; powinna być taka sama jak wartość height dla body */
@@ -113,10 +137,19 @@ header {
     animation: slideDown 12s linear infinite;
 }
 
-.bg__img--dots {
+.dots-container {
+    position: absolute;
     top: 0;
-    left: 50%;
-    height: 75vh;
+    left: 55%;
+    width: 35%;
+    /* height: 75vh; */
+    height: var(--bodyHeight);
+    overflow: hidden;
+}
+
+.bg__img--dots {
+    width: 100%;
+    position: absolute;
     animation: rotate 50s linear infinite;
 }
 
