--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,9 @@ p {
 
 a {
     text-decoration: none;
-    color: var(--blue);
+    color: #819bfb;
     position: relative;
+    font-weight: 600;
 }
 
 a:after {
